--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "1.0.0"
 authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
 edition = "2018"
 
-[dependencies]
-clap = "2"
+[dependencies.clap]
+version = "2"
+default-features = true
+features = ["wrap_help"]
