--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "1.0.0"
 authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
 edition = "2018"
 
+[dependencies]
+futures = "0.1"
+hyper = "0.12"
+
 [dependencies.clap]
 version = "2"
 default-features = true
