--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2018"
 [dependencies]
 futures = "0.1"
 hyper = "0.12"
+serde_yaml = "0.8"
+
+[dependencies.serde]
+version = "1"
+features = ["derive"]
 
 [dependencies.clap]
 version = "2"
