--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
 edition = "2018"
 
 [dependencies]
+bincode = "1"
 futures = "0.1"
 hyper = "0.12"
 serde_yaml = "0.8"
