Implement part of the proposer part of the protocol

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,4 @@
-- address: "127.0.0.1:3000"
-- address: "127.0.0.1:3001"
-- address: "127.0.0.1:3002"
+nodes:
+  - "127.0.0.1:3000"
+  - "127.0.0.1:3001"
+  - "127.0.0.1:3002"
