--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
-language: rust
-rust:
-  - stable
+language: generic
+services: docker
 install:
-  - rustup component add clippy
-  - rustup component add rustfmt
-  - curl https://raw.githubusercontent.com/stepchowfun/tagref/master/install.sh -LSfs | sh
+  - |
+    if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+      echo "$DOCKER_HUB_PASSWORD" | docker login --username stephanmisc --password-stdin
+    fi
+  - curl https://raw.githubusercontent.com/stepchowfun/bake/master/install.sh -LSfs | VERSION=0.3.0 sh
 script:
-  - cargo clean
-  - cargo fmt --all -- --check
-  - cargo clippy -- --deny clippy::pedantic
-  - cargo test
-  - cargo run -- --version
-  - tagref
+  - |
+    if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+      WRITE_REMOTE_CACHE=true
+    else
+      WRITE_REMOTE_CACHE=false
+    fi
+    bake \
+      --repo stephanmisc/bake \
+      --read-remote-cache true \
+      --write-remote-cache "$WRITE_REMOTE_CACHE"
