--- a/bake.yml
+++ b/bake.yml
@@ -1,21 +1,22 @@
 image: ubuntu:18.04
+default: ci
 tasks:
   install_packages:
-    command: |
-      set -euxo pipefail
+    command: |-
+      set -euo pipefail
       apt-get update
       apt-get install --yes build-essential curl
 
   install_tagref:
     dependencies:
       - install_packages
-    command: |
-      set -euxo pipefail
+    command: |-
+      set -euo pipefail
       curl https://raw.githubusercontent.com/stepchowfun/tagref/master/install.sh -LSfs | VERSION=1.1.0 sh
 
   create_user:
-    command: |
-      set -euxo pipefail
+    command: |-
+      set -euo pipefail
       adduser --disabled-password --gecos '' user
 
   install_rust:
@@ -23,8 +24,8 @@ tasks:
       - install_packages
       - create_user
     user: user
-    command: |
-      set -euxo pipefail
+    command: |-
+      set -euo pipefail
       curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable-2019-04-25-x86_64-unknown-linux-gnu
       . $HOME/.cargo/env
       rustup component add clippy
@@ -43,8 +44,8 @@ tasks:
       - Cargo.lock
       - Cargo.toml
     user: user
-    command: |
-      set -euxo pipefail
+    command: |-
+      set -euo pipefail
       . $HOME/.cargo/env
       mv Cargo.lock Cargo.lock.og
       mv Cargo.toml Cargo.toml.og
@@ -52,6 +53,9 @@ tasks:
       mv Cargo.lock.og Cargo.lock
       mv Cargo.toml.og Cargo.toml
       cargo build
+      cargo clean --package paxos
+      cargo build --release
+      cargo clean --release --package paxos
       cargo clippy
       rm -rf src
 
@@ -62,8 +66,8 @@ tasks:
       - resources
       - src
     user: user
-    command: |
-      set -euxo pipefail
+    command: |-
+      set -euo pipefail
       . $HOME/.cargo/env
       cargo build
 
@@ -71,8 +75,8 @@ tasks:
     dependencies:
       - build
     user: user
-    command: |
-      set -euxo pipefail
+    command: |-
+      set -euo pipefail
       . $HOME/.cargo/env
       cargo test
 
@@ -83,18 +87,40 @@ tasks:
       - .ignore # Used by `tagref`
       - rustfmt.toml # Used by `cargo fmt`
     user: user
-    command: |
-      set -euxo pipefail
+    command: |-
+      set -euo pipefail
       . $HOME/.cargo/env
       cargo fmt --all -- --check
-      cargo clippy -- --deny clippy::pedantic
+      cargo clippy --all-targets --all-features -- --deny warnings --deny clippy::all --deny clippy::pedantic
       tagref
 
   run:
     dependencies:
-      - lint
+      - build
     user: user
     command: |
       set -euxo pipefail
       . $HOME/.cargo/env
       cargo run -- --help
+
+  ci:
+    dependencies:
+      - build
+      - lint
+      - test
+      - run
+
+  release:
+    dependencies:
+      - fetch_crates
+    input_paths:
+      - src
+    output_paths:
+      - artifacts
+    user: user
+    command: |-
+      set -euo pipefail
+      . $HOME/.cargo/env
+      cargo build --release
+      mkdir artifacts
+      cp target/release/paxos artifacts/paxos-x86_64-unknown-linux-gnu
