--- a/bake.yml
+++ b/bake.yml
@@ -1,7 +1,7 @@
 image: ubuntu:18.04
 tasks:
   install_packages:
-    command: |-
+    command: |
       set -euo pipefail
       apt-get update
       apt-get install --yes build-essential curl
@@ -9,12 +9,12 @@ tasks:
   install_tagref:
     dependencies:
       - install_packages
-    command: |-
+    command: |
       set -euo pipefail
       curl https://raw.githubusercontent.com/stepchowfun/tagref/master/install.sh -LSfs | VERSION=1.1.0 sh
 
   create_user:
-    command: |-
+    command: |
       set -euo pipefail
       adduser --disabled-password --gecos '' user
 
@@ -23,7 +23,7 @@ tasks:
       - install_packages
       - create_user
     user: user
-    command: |-
+    command: |
       set -euo pipefail
       curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain stable-2019-04-25-x86_64-unknown-linux-gnu
       . $HOME/.cargo/env
@@ -43,7 +43,7 @@ tasks:
       - Cargo.lock
       - Cargo.toml
     user: user
-    command: |-
+    command: |
       set -euo pipefail
       . $HOME/.cargo/env
       mv Cargo.lock Cargo.lock.og
@@ -65,7 +65,7 @@ tasks:
       - resources
       - src
     user: user
-    command: |-
+    command: |
       set -euo pipefail
       . $HOME/.cargo/env
       cargo build
@@ -74,7 +74,7 @@ tasks:
     dependencies:
       - build
     user: user
-    command: |-
+    command: |
       set -euo pipefail
       . $HOME/.cargo/env
       cargo test
@@ -86,7 +86,7 @@ tasks:
       - .ignore # Used by `tagref`
       - rustfmt.toml # Used by `cargo fmt`
     user: user
-    command: |-
+    command: |
       set -euo pipefail
       . $HOME/.cargo/env
       cargo fmt --all -- --check
@@ -98,6 +98,6 @@ tasks:
       - build
     user: user
     command: |
-      set -euxo pipefail
+      set -euo pipefail
       . $HOME/.cargo/env
       cargo run -- --help
