--- a/toast.yml
+++ b/toast.yml
@@ -1,5 +1,5 @@
 image: ubuntu:18.04
-default: ci
+default: check
 tasks:
   install_packages:
     command: |
@@ -104,13 +104,6 @@ tasks:
       set -euo pipefail
       . $HOME/.cargo/env
       cargo run -- --help
-
-  ci:
-    dependencies:
-      - build
-      - lint
-      - run
-      - test
 
   check:
     dependencies:
