--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "paxos"
 version = "1.0.0"
 authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
 edition = "2018"
+description = "An implementation of single-decree Paxos."
+license = "MIT"
+documentation = "https://github.com/stepchowfun/paxos"
+homepage = "https://github.com/stepchowfun/paxos"
+repository = "https://github.com/stepchowfun/paxos"
+readme = "README.md"
 
 [dependencies]
 bincode = "1"
