Update the set of tasks to run in CI

--- a/toast.yml
+++ b/toast.yml
@@ -119,6 +119,7 @@ tasks:
     dependencies:
       - fetch_crates
     input_paths:
+      - resources
       - src
     user: user
     command: |
