--- a/toast.yml
+++ b/toast.yml
@@ -1,12 +1,12 @@
 image: ubuntu:20.04
 default: build
+user: user
+command_prefix: set -euo pipefail
 tasks:
   install_packages:
     description: Install system packages.
+    user: root
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Install the following packages:
       #
       # - build-essential - Used for linking the binary
@@ -20,19 +20,15 @@ tasks:
     description: Install Tagref, a reference checking tool.
     dependencies:
       - install_packages
+    user: root
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Install Tagref using the official installer script.
       curl https://raw.githubusercontent.com/stepchowfun/tagref/main/install.sh -LSfs | sh
 
   create_user:
     description: Create a user who doesn't have root privileges.
+    user: root
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Create a user named `user` with a home directory.
       adduser --disabled-password --gecos '' user
 
@@ -41,11 +37,7 @@ tasks:
     dependencies:
       - install_packages
       - create_user
-    user: user
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Install stable Rust. [tag:rust_1_53_0]
       curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- \
         -y \
@@ -72,11 +64,7 @@ tasks:
     input_paths:
       - Cargo.lock
       - Cargo.toml
-    user: user
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Add Rust tools to `$PATH`.
       . $HOME/.cargo/env
 
@@ -106,11 +94,7 @@ tasks:
     input_paths:
       - resources
       - src
-    user: user
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Add Rust tools to `$PATH`.
       . $HOME/.cargo/env
 
@@ -121,11 +105,7 @@ tasks:
     description: Run the test suite.
     dependencies:
       - build
-    user: user
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Add Rust tools to `$PATH`.
       . $HOME/.cargo/env
 
@@ -145,11 +125,7 @@ tasks:
       # [tag:excluded_input_paths] Keep this in sync with [ref:gitignore].
       - artifacts
       - target
-    user: user
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Add Rust tools to `$PATH`.
       . $HOME/.cargo/env
 
@@ -186,11 +162,7 @@ tasks:
     description: Run the program.
     dependencies:
       - build
-    user: user
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Add Rust tools to `$PATH`.
       . $HOME/.cargo/env
 
@@ -205,11 +177,7 @@ tasks:
       - src
     output_paths:
       - src
-    user: user
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Add Rust tools to `$PATH`.
       . $HOME/.cargo/env
 
@@ -227,11 +195,7 @@ tasks:
       - src
     output_paths:
       - artifacts
-    user: user
     command: |
-      # Make Bash not silently ignore errors.
-      set -euo pipefail
-
       # Add Rust tools to `$PATH`.
       . $HOME/.cargo/env
 
