--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,16 @@ jobs:
         name: x86_64-unknown-linux-musl
         path: artifacts/paxos
         if-no-files-found: error
+    - run: |
+        # Make Bash not silently ignore errors.
+        set -euo pipefail
+        # The artifact name will contain the target triple, so the file name doesn't need to.
+        mv artifacts/paxos-aarch64-unknown-linux-gnu artifacts/paxos
+    - uses: actions/upload-artifact@v2
+      with:
+        name: aarch64-unknown-linux-gnu
+        path: artifacts/paxos
+        if-no-files-found: error
   ci-windows:
     name: Build for Windows
     runs-on: windows-latest
@@ -163,6 +173,9 @@ jobs:
           artifacts/x86_64-unknown-linux-musl/paxos \
           artifacts/paxos-x86_64-unknown-linux-musl
         mv \
+          artifacts/aarch64-unknown-linux-gnu/paxos \
+          artifacts/paxos-aarch64-unknown-linux-gnu
+        mv \
           artifacts/x86_64-apple-darwin/paxos \
           artifacts/paxos-x86_64-apple-darwin
         mv \
@@ -178,6 +191,7 @@ jobs:
           --message "v$VERSION" \
           --attach 'artifacts/paxos-x86_64-unknown-linux-gnu' \
           --attach 'artifacts/paxos-x86_64-unknown-linux-musl' \
+          --attach 'artifacts/paxos-aarch64-unknown-linux-gnu' \
           --attach 'artifacts/paxos-x86_64-apple-darwin' \
           --attach 'artifacts/paxos-aarch64-apple-darwin' \
           --attach 'artifacts/paxos-x86_64-pc-windows-msvc.exe' \
