--- a/toast.yml
+++ b/toast.yml
@@ -135,8 +135,8 @@ tasks:
       - .git
 
       # [tag:excluded_input_paths] Keep this in sync with [ref:gitignore].
-      - .data
       - artifacts
+      - data
       - target
     command: |
       # Lint the code with Clippy.
