--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -230,7 +230,7 @@ jobs:
           artifacts/paxos-aarch64-pc-windows-msvc.exe
 
         # Create the release.
-        gh release create "v$VERSION" --title "v$VERSION" --notes '' \
+        gh release create "v$VERSION_TO_PUBLISH" --title "v$VERSION_TO_PUBLISH" --notes '' \
           'artifacts/paxos-x86_64-unknown-linux-gnu' \
           'artifacts/paxos-x86_64-unknown-linux-musl' \
           'artifacts/paxos-aarch64-unknown-linux-gnu' \
